<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">De Maaltijd App</string>
    <string name="app_meal_image">Foto van het gerecht</string>
    <string name="app_login_title">De MaaltijdApp</string>
    <string name="app_input_studentnumber">Studentnummer</string>
    <string name="app_input_password">Wachtwoord</string>
    <string name="app_input_loginbuton">Inloggen</string>
    <string name="app_input_error_nousername">Geen studentennummer ingevuld</string>
    <string name="app_input_error_nopass">Geen wachtwoord ingevuld</string>
    <string name="app_input_error_nofirstname">Geen voornaam ingevuld</string>
    <string name="app_input_error_nolastname">Geen achternaam ingevuld</string>
    <string name="app_input_error_noemail">Geen email ingevuld</string>
    <string name="app_input_error_notelephonenumber">Geen telefoonnummer ingevuld</string>
    <string name="app_input_error_wrong">Gebruikersnaam en wachtwoord worden niet herkend</string>
    <string name="app_input_error_loading">Aan het verifiëren…</string>
    <string name="app_input_error_tooManyPeople">Te veel gasten voor deze maaltijd</string>
    <string name="app_input_error_notnegative">Dit mag niet lager dan 0 zijn</string>
    <string name="app_input_error_notsamepassword">Deze wachtwoorden zijn niet hetzelfde</string>
    <string name="app_dashboard_title">Dashboard</string>
    <string name="app_dashboard_desc">Welkom terug bij de MaaltijdApp. Hier kun je jezelf inschrijven voor maaltijden, zelf een maaltijd plannen en de lijst van studenten inzien.</string>
    <string name="app_dashboard_button_meals" tools:ignore="MissingTranslation">🍝</string>
    <string name="app_dashboard_button_newmeal" tools:ignore="MissingTranslation">➕</string>
    <string name="app_dashboard_button_account" tools:ignore="MissingTranslation">⚙</string>
    <string name="app_meals_cheficon" tools:ignore="MissingTranslation">🍳</string>
    <string name="app_meals_moneyicon" tools:ignore="MissingTranslation">💰</string>
    <string name="app_meals_timeicon" tools:ignore="MissingTranslation">⏰ </string>
    <string name="app_meals_mailicon" tools:ignore="MissingTranslation">📧</string>
    <string name="app_meals_phoneicon" tools:ignore="MissingTranslation">☎</string>
    <string name="app_meals_checkicon" tools:ignore="MissingTranslation">✔</string>
    <string name="app_meals_title">Maaltijden</string>
    <string name="app_meals_desc">Dit is een overzicht aan maaltijden die gepland staan, klik op een maaltijd om de details te zien. Sleep naar beneden om te herladen.</string>
    <string name="app_meal_removebutton">Uitschrijven</string>
    <string name="app_meal_removemeal">Maaltijd verwijderen</string>
    <string name="app_students_title">Studenten</string>
    <string name="app_students_desc">Dit is een overzicht aan studenten. Sleep naar beneden om te herladen.</string>
    <string name="app_meals_addbutton">Ik wil mee eten</string>
    <string name="app_placeholder">placeholdertext</string>
    <string name="app_login_registerbutton">Account aanmaken</string>
    <string name="app_register_title">Registreer jezelf</string>
    <string name="app_register_voornaam">Voornaam</string>
    <string name="app_register_insertion">Tussenvoegsel</string>
    <string name="app_register_achternaam">Achternaam</string>
    <string name="app_register_email" tools:ignore="Typos">Email adres</string>
    <string name="app_register_phone">Telefoonnummer</string>
    <string name="app_register_confirmbutton">Registreren</string>
    <string name="app_meals_eaters">Eet mee: </string>
    <string name="app_joinmeal_title">Mee eten</string>
    <string name="app_joinmeal_aantaltitel">Neem je nog mensen mee?</string>
    <string name="app_joinmeal_fullalready">Deze maaltijd zit vol</string>
    <string name="app_reload_success">Succesvol herladen!</string>
    <string name="app_reload_failure">Er ging iets mis bij het herladen</string>
    <string name="app_joinscreen_chooseamount">Aantal gasten</string>
    <string name="app_newmeal_title">Nieuwe maaltijd</string>
    <string name="app_newmeal_dish">Gerecht</string>
    <string name="app_newmeal_info">Extra informatie (allergieën, ingrediënten etc.)</string>
    <string name="app_newmeal_date">Datum</string>
    <string name="app_newmeal_price">Prijs per persoon</string>
    <string name="app_newmeal_max">Maximaal aantal mee-eters</string>
    <string name="app_newmeal_doescookeet">Eet jij als chef mee?</string>
    <string name="app_newmeal_selectpicture">Selecteer foto</string>
    <string name="app_newmeal_addmeal">Toevoegen</string>
    <string name="app_accounts_title">Mijn account</string>
    <string name="app_register_confirm">Wachtwoord bevestigen</string>
    <string name="app_error_obj">Er is een fout opgetreden, probeer het nog een keer</string>
    <string name="app_error_conn">Kon geen verbinding maken of er was een fout, probeer het opnieuw</string>
    <string name="newmeal_takendate">Op deze datum staat al een maaltijd gepland</string>
    <string name="app_input_error_dish">Vul hier een maaltijd in</string>
    <string name="app_error_noinfo">Vul wat informatie in over de maaltijd</string>
    <string name="app_error_noprice">Vul hier de prijs van de maaltijd in</string>
    <string name="app_input_error_maxpeople">Vul hier de maximale hoeveelheid mensen in</string>
    <string name="app_input_dateformat">00–00–0000</string>
    <string name="newmeal_error_dateformat">Formateer de datum als volgt: dd-mm-jjjj</string>
    <string name="app_accounts_commit">Wijzigingen aanbrengen</string>
    <string name="app_dashboard_button_students">👨</string>
    <string name="app_joinmeal_success">Succesvol toegevoegd!</string>
    <string name="app_changedstudent_success">Succesvol aangepast</string>
    <string name="app_input_imagechosen">Afbeelding gekozen</string>
    <string name="app_previewimage">Voorbeeld foto</string>
    <string name="app_dashboard_logout">Uitloggen</string>
    <string name="app_error_relogin">Sessie sleutel verlopen, gelieve opnieuw in te loggen</string>
    <string name="app_input_error_time">Vul hier de tijd in, format: 00:00</string>
</resources>
