<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_background"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    tools:context="nl.mheijden.prog3app.controllers.activities.AccountsActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_accounts_title"
        android:textColor="@color/colorSemiWhite"
        android:textSize="37sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_input_studentnumber"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_placeholder"
        android:textColor="@color/colorSemiWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_register_voornaam"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/accounts_voornaam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/app_register_voornaam"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_register_insertion"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/accounts_insertion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/app_register_insertion"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_register_achternaam"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/accounts_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/app_register_achternaam"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_register_email"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/accounts_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/app_register_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_register_phone"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/accounts_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/app_register_phone"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_input_password"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/accounts_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/app_input_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/accounts_passwordconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/app_register_confirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_confirmbutton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorTransparent"
        android:text="@string/app_accounts_commit"
        android:textSize="24sp" />
</LinearLayout>
