<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:weightSum="6"
    tools:context="nl.mheijden.prog3app.controllers.activities.MainActivity"
    tools:targetApi="o">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_dashboard_title"
            android:textColor="@color/colorSemiWhite"
            android:textSize="37sp"
            android:textStyle="bold"
            tools:text="@string/app_dashboard_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_dashboard_desc"
            android:textColor="@color/colorSemiWhite"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mealsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/app_dashboard_button_meals"
            android:textSize="120sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/studentsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/app_dashboard_button_students"
            android:textSize="120sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/newMealButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/app_dashboard_button_newmeal"
            android:textSize="120sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/accountButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/app_dashboard_button_account"
            android:textSize="120sp" />
    </LinearLayout>

    <Button
        android:id="@+id/dashboard_uitloggen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/colorTransparent"
        android:text="@string/app_dashboard_logout"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
