<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_background"
    android:orientation="vertical"
    android:paddingHorizontal="8sp"
    tools:context="nl.mheijden.prog3app.controller.activities.RegisterActivity"
    android:weightSum="12">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_register_title"
        android:textColor="@color/colorSemiWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_input_studentnumber"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/register_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_input_studentnumber"
        android:inputType="numberSigned"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_register_voornaam"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/register_voornaam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_register_voornaam"
        android:inputType="textPersonName"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_register_insertion"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/register_tusesnvoegsel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_register_insertion"
        android:inputType="textPersonName"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_register_achternaam"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/register_achternaam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_register_achternaam"
        android:inputType="textPersonName"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_register_email"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_register_email"
        android:inputType="textEmailAddress"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_register_phone"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/register_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_register_phone"
        android:inputType="phone"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_input_password"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/register_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_input_password"
        android:inputType="textPassword"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/register_confirmbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:text="@string/app_register_confirmbutton"
        android:textSize="24sp"
        android:layout_weight="1"/>

</LinearLayout>
