<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="@drawable/restaurant_background"
    android:orientation="vertical"
    tools:context="nl.mheijden.prog3app.controller.activities.MealsActivity_Join">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:background="@color/colorDarkBlueTransparent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/joinscreen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/joinscreen_mealinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/colorSemiWhite"
                    android:textSize="18sp"
                    tools:text="@string/app_placeholder" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorDarkBlueTransparent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_joinmeal_aantaltitel"
            android:textColor="@color/colorSemiWhite"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/amountOfPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_joinscreen_chooseamount"
            android:inputType="numberSigned"
            android:textColor="@color/colorSemiWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/joinscreen_errorfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/joinscreen_confirmbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/app_joinmeal_title"
            android:textColor="@color/colorSemiWhite"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
