<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_background"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="nl.mheijden.prog3app.controller.activities.MealsActivity_Detail"
    tools:targetApi="o">

    <ImageView
        android:id="@+id/meal_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/app_meal_image"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/colorDarkBlueTransparent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:weightSum="6">

        <TextView
            android:id="@+id/meal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/app_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/meal_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_placeholder"
                android:textColor="@color/colorSemiWhite"
                android:textSize="24sp" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/meal_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_placeholder"
                android:textColor="@color/colorSemiWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/meal_eaters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_placeholder"
                android:textColor="@color/colorSemiWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/meal_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorSemiWhite"
                android:textSize="18sp"
                tools:text="@string/app_placeholder" />

        </LinearLayout>

        <TextView
            android:id="@+id/meal_felloweaterlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_placeholder"
            android:textColor="@color/colorSemiWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/meal_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_placeholder"
            android:textColor="@color/colorSemiWhite"
            android:textSize="24sp" />

        <Button
            android:id="@+id/meal_eatwithbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/app_meals_addbutton"
            android:textColor="@color/colorGreen"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>
